@@ -8,6 +8,7 @@
  - Fix for bug 27640: Ignore delimiting white-space between mail-safe encoded words
  - Fix for bug 27863: Added null guard while composing mail debug information
  - Fix for bug 27864: Deal with possible null elements in passed message array on APPEND operation
+ - Fix for bug 27866: Handle possible null return value from iCal parse attempt
 
 * 2013-07-26 - marcus.klein@open-xchange.com
 
